# rs_download

./: LICENSE.md  README.md  credentials.json  elegant-tide-219210-592108e3651a.json  environment.yml  landsat.ipynb  pyproject.toml  sentinel1.ipynb  sentinel2.ipynb  sentinel5p.ipynb
